--- a/APIDocumentation/summary-report-dataset-en.html
+++ b/APIDocumentation/summary-report-dataset-en.html
@@ -44,6 +44,7 @@
     </script><!-- End Google Tag Manager -->
 </head>
 <body class="secondary" typeof="WebPage" vocab="http://schema.org/">
+    <script src="./js/dhpr.js"></script>
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <noscript><iframe height="0" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" style="display:none;visibility:hidden" title="Google Tag Manager" width="0"></iframe></noscript>
     <script>
@@ -384,9 +385,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api/basisdecision/?lang=en&type=xml" target="_blank" title="Resource 1">Access</a>
-                                        </td>
+                                        <td><a id="basisdecisionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/regcontent/api/basisdecision/?lang=en&type=xml', 'basisdecisionEN')">Access</a></td>
                                     </tr><!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
                                     <tr>
@@ -394,9 +393,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>French</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api/basisdecision/?lang=fr&type=xml" target="_blank" title="Resource 2">Access</a>
-                                        </td>
+                                        <td><a id="basisdecisionFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/regcontent/api/basisdecision/?lang=fr&type=xml', 'basisdecisionFR')">Access</a></td>
                                     </tr>
                                     <tr>
                                         <td>Regulatory Decision</td>
@@ -421,9 +418,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api/regulatorydecision/?lang=en&type=xml" target="_blank" title="Resource 1">Access</a>
-                                        </td>
+                                        <td><a id="regulatorydecisionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/regcontent/api/regulatorydecision/?lang=en&type=xml', 'regulatorydecisionEN')">Access</a></td>
                                     </tr><!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
                                     <tr>
@@ -431,9 +426,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>French</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api/regulatorydecision/?lang=fr&type=xml" target="_blank" title="Resource 2">Access</a>
-                                        </td>
+                                        <td><a id="regulatorydecisionFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/regcontent/api/regulatorydecision/?lang=fr&type=xml', 'regulatorydecisionFR')">Access</a></td>
                                     </tr>
                                     <tr>
                                         <td>Summary Safety Review</td>
@@ -458,9 +451,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api/safetyreview/?lang=en&type=xml" target="_blank" title="Resource 1">Access</a>
-                                        </td>
+                                        <td><a id="safetyreviewEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/regcontent/api/safetyreview/?lang=en&type=xml', 'safetyreviewEN')">Access</a></td>
                                     </tr><!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
                                     <tr>
@@ -468,9 +459,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>French</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/regcontent/api/safetyreview/?lang=fr&type=xml" target="_blank" title="Resource 2">Access</a>
-                                        </td>
+                                        <td><a id="safetyreviewFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/regcontent/api/safetyreview/?lang=fr&type=xml', 'safetyreviewFR')">Access</a></td>
                                     </tr><!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
                                     <tr>
