--- a/APIDocumentation/mdall-dataset-fr.html
+++ b/APIDocumentation/mdall-dataset-fr.html
@@ -46,6 +46,7 @@
 
 </head>
 <body class="secondary" typeof="WebPage" vocab="http://schema.org/">
+    <script src="./js/dhpr.js"></script>
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <noscript><iframe height="0" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" style="display:none;visibility:hidden" title="Google Tag Manager" width="0"></iframe></noscript>
     <script>
@@ -403,9 +404,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Actif</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licence/?status=active&type=xml" target="_blank" title="Resource 1">Accès</a>
-                                        </td>
+                                        <td><a id="licenceActive" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=active&type=xml', 'licenceActive')">Accès</a></td>
                                     </tr><!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
                                     <tr>
@@ -413,9 +412,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archivé</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=xml" target="_blank" title="Resource 2">Accès</a>
-                                        </td>
+                                        <td><a id="licenceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=xml', 'licenceArchived')">Accès</a></td>
                                     </tr><!--Company-->
                                     <tr>
                                         <td>Company</td>
@@ -460,9 +457,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Actif</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/company/?status=active&type=xml" target="_blank" title="Resource 1">Accès</a>
-                                        </td>
+                                        <td><a id="companyActive" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=active&type=xml', 'companyActive')">Accès</a></td>
                                     </tr><!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
                                     <tr>
@@ -470,9 +465,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archivé</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/company/?status=archived&type=xml" target="_blank" title="Resource 2">Accès</a>
-                                        </td>
+                                        <td><a id="companyArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/company/?status=archived&type=xml', 'companyArchived')">Accès</a></td>
                                     </tr><!--Device-->
                                     <tr>
                                         <td>Device</td>
@@ -515,18 +508,14 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Actif</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/device/?status=active&type=xml" target="_blank" title="Resource 1">Accès</a>
-                                        </td>
+                                        <td><a id="deviceActive" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=active&type=xml', 'deviceActive')">Accès</a></td>
                                     </tr>
                                     <tr>
                                         <td>Device</td>
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>Archivé</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/device/?status=archived&type=xml" target="_blank" title="Resource 1">Accès</a>
-                                        </td>
+                                        <td><a id="deviceArchived" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/device/?status=archived&type=xml', 'deviceArchived')">Accès</a></td>
                                     </tr><!--Device Identifier -->
                                     <tr>
                                         <td>Device Identifier</td>
@@ -624,19 +613,14 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=xml" target="_blank" title="Resource 1">Accès</a>
-                                        </td>
+                                        <td><a id="licencetypeEn" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=xml', 'licencetypeEN')">Accès</a></td>
                                     </tr>
                                     <tr>
                                         <td>Licence Type</td>
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>French</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/licencetype/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
-                                        </td>
-                                    </tr><!--SBD Location-->
+                                        <td><a id="licencetypeFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/licencetype/?lang=fr&type=xml', 'licencetypeFR')">Accès</a></td>                                    </tr><!--SBD Location-->
                                     <tr>
                                         <td>Summary Basis Decision Location</td>
                                         <td>Dataset</td>
@@ -682,18 +666,14 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=xml" target="_blank" title="Resource 1">Accès</a>
-                                        </td>
+                                        <td><a id="sbdlocationEn" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=xml', 'sbdlocationEN')">Accès</a></td>
                                     </tr>
                                     <tr>
                                         <td>Summary Basis Decision Location</td>
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>French</td>
-                                        <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
-                                        </td>
+                                        <td><a id="sbdlocationFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=fr&type=xml', 'sbdlocationFR')">Accès</a></td>
                                     </tr>
                                     <tr>
                                         <td>Medical Devices Active Licence Listing API Documentation</td>
