--- a/APIDocumentation/dpd-dataset-fr.html
+++ b/APIDocumentation/dpd-dataset-fr.html
@@ -544,7 +544,7 @@
                                         <td>XML</td>
                                         <td>Unilingual</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/pharmaceuticalstd/?type=xml" target="_blank" title="Resource 1">Accès</a>
+                                            <a id="pharmaceuticalstd" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/pharmaceuticalstd/?type=xml', 'pharmaceuticalstd')">Accès</a>
                                         </td>
                                     </tr><!--Schedule-->
                                     <tr>
